# ia-imob

./: .gitignore  .gitmodules  .~lock.Relatório PAC v2.docx#  AGENTS.md  CONTEXT-MAP.md  GEMINI.md  Makefile  README.md  start.sh  teste
ai-backendd-imobiliaria/: .env.example  .vercelignore  (+6 more)
cadastrador/: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
cadastrador/app/: __init__.py  compat.py  dependencies.py  main.py  schemas.py
cadastrador/app/inspection/: __init__.py  __main__.py
cadastrador/app/inspection/runs/db-rich-v1-20260605T192850082578Z/: prompt-system.txt  prompt-user.txt  report.html  result.json
cadastrador/app/inspection/runs/db-rich-v1-20260605T193426241223Z/: prompt-system.txt  prompt-user.txt  report.html  result.json
cadastrador/app/routers/: agencies.py  debug.py  refinement.py
cadastrador/app/services/: anchors.py  discovery.py  extraction.py  llm.py  onboarding.py  persistence.py  refinement.py  sse.py  tournament.py  validation.py  verification.py
cadastrador/docs/: onboarding-regras-de-negocio.md
cadastrador/docs/adr/: 0001-onboarding-accuracy-via-consensus-tournament.md  0002-presenca-gate-and-smoke-validation.md  0003-html-evidence-belongs-to-onboarding-attempts.md  0004-refinement-preview-runs-in-cadastrador.md  0005-store-html-evidence-in-postgres.md
cadastrador/ia_imob_cadastrador.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cadastrador/tests/: test_anchors.py  test_api.py  test_discovery.py  test_inspection.py  test_llm.py  test_onboarding.py  test_refinement.py  test_tournament.py  test_validation.py
(+1138 files in other folders)
