[project]
name = "ia-imob-cadastrador"
version = "0.1.0"
description = "FastAPI service for DB-only real-estate agency onboarding."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "httpx>=0.27.2",
    "pydantic>=2.9.2,<3",
    "psycopg2-binary>=2.9.12",
    "lxml>=6.0.2",
    "parsel==1.11.0",
    "langchain-core>=1.4.0,<2",
    "langchain-openai>=1.2.2,<2",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
